# figma-query

./: .gitignore  .mcp.json  .pre-commit-config.yaml  Makefile  README.md  go.mod  index.js  package.json
.github/workflows/: ci.yml  release.yml
cmd/figma-query/: main.go
internal/figma/: client.go  client_test.go  types.go
internal/tools/: detail.go  diff.go  export.go  info.go  integration_test.go  list.go  output.go  query.go  query_test.go  registry.go  search.go  sync_file.go  tree.go  wireframe.go
python/: pyproject.toml
python/figma_query/: __init__.py  __main__.py  cli.py
scripts/: postinstall.js
