[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figma-query"
dynamic = ["version"]
description = "Token-efficient Figma MCP server with image export, query DSL, and design token support"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "StandardBeagle" }
]
keywords = [
    "figma",
    "mcp",
    "model-context-protocol",
    "design-tokens",
    "css",
    "design-system"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/standardbeagle/figma-query"
Repository = "https://github.com/standardbeagle/figma-query"
Issues = "https://github.com/standardbeagle/figma-query/issues"

[project.scripts]
figma-query = "figma_query.cli:main"

[tool.hatch.version]
path = "figma_query/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["figma_query"]

[tool.hatch.build.targets.wheel.shared-data]
"bin/figma-query-darwin-amd64" = "figma_query/bin/figma-query-darwin-amd64"
"bin/figma-query-darwin-arm64" = "figma_query/bin/figma-query-darwin-arm64"
"bin/figma-query-linux-amd64" = "figma_query/bin/figma-query-linux-amd64"
"bin/figma-query-linux-arm64" = "figma_query/bin/figma-query-linux-arm64"
"bin/figma-query-windows-amd64.exe" = "figma_query/bin/figma-query-windows-amd64.exe"
